2주차 첫 커밋

--- a/1/1-2.md
+++ b/1/1-2.md
@@ -6,7 +6,7 @@
 <br>
 
 ## TCP 와 UDP
-![Alt OSI 7Layer 와 TCP/IP 4Layer](img\1-2-1.png)
+![Alt OSI 7Layer 와 TCP/IP 4Layer](img/1-2-1.png)
 * TCP(Transmission Control Protocol)
     + 직역하면 전송 제어 프로토콜인데, 데이터를 메세지 형식으로 보내기 위한 프로토콜이다.
     + 연결을 지향하고 흐름을제어하고 혼잡을 제어한다.
