--- a/2/2-1.md
+++ b/2/2-1.md
@@ -33,19 +33,60 @@
 3. Stateless<br>
     기본적으로 무상태이어야 한다. 클라이언트가 서버에 보내는 요청에는 그 요청을 이해할 수 있는 모든 정보가 들어 있어야 한다. 무상태의 장점과 단점을 모두 가진다.
 4. Cache<br>
-    네트워크 효율을 위해 **"클라이언트--캐시--무상태--서버** 스타일을 적용한다. 요청에 의한 응답 데이터를 캐시가능한 것 과 캐시 불가능 한 것으로 나누어 지정 하고 캐시 가능한 응답은 동일한 요청이 왔을 때 재사용 할 수 있도록 하여 효율성을 높인다.
-5. Uniform Interface
-    REST의 가장 큰 차별점은 구성 요소간의 균일한 인터페이스에 중점을 둔다는 점이다. 여기서 발생하는 문제점이 애플리케이션 마다 요구 사항이 다르기 때문에 정해져있는 인터페이스를 가지고 정보가 전송되면 효율성을 저하 시킬 수 있다.
-    * Identification of Resources
+    네트워크 효율을 위해 **클라이언트--캐시--무상태--서버** 스타일을 적용한다. 요청에 의한 응답 데이터를 캐시가능한 것 과 캐시 불가능 한 것으로 나누어 지정 하고 캐시 가능한 응답은 동일한 요청이 왔을 때 재사용 할 수 있도록 하여 효율성을 높인다.
+5. Uniform Interface<br>
+    REST의 가장 큰 차별점은 구성 요소간의 균일한 인터페이스에 중점을 둔다는 점이다. 여기서 발생하는 문제점이 애플리케이션 마다 요구 사항이 다르기 때문에 정해져있는 인터페이스를 가지고 정보가 전송되면 효율성을 저하 시킬 수 있다.<br>
+    **필딩 제약조건**
+    * Identification of Resources<br>
+        + Resource의 식별, URI 등으로 리소스를 식별
     * Manipulation of Resources through Representations
+        + 표현을 통한 리소스의 조작
     * Self-descriptive messages
+        + 자기서술적인 메세지
     * hypermedia as the engine of application state
+        + 
 6. Layered System<br>
-    큰 규모의 요구사항에 맞춰 계층화된 시스템을 사용
+    큰 규모의 요구사항에 맞춰 계층화된 시스템을 사용, 계층으로 구성하며 각 레이어에 속한 구성요소는 인접하지 않은 레이어의 구성요소를 볼 수 없다.
 7. Code on Demand<br>
     애플릿 또는 스크립트 형태의 코드를 다운로드하고 실행하여 클라이언트 기능을 확장 할 수 있다.
 
-    
+## Representation
+* HTTP에서의 representation<br>
+    어떤 리소스의 특정 시점의 상태를 반영하고 있는 정보, representation 은 representation DATA 와 representation META-DATA 로 구성된다.<br>
+    여기서 특정 시점은 누가 선택하는가? 이 말은 하나의 리소스에 현재 representation이 여러개가 될 수 있다는 것과 같은데 이는 사전 협상에 따라 요청에 선호하는 것을 헤더에 넘긴다면 서버는 가장 적절한 representation을 응답하는 것이다.
+    ```HTTP
+    Content-Type: text/plain
+    Content-Language: en
+
+    hello
+    ```
+
+    ```HTTP
+    Content-Type: text/plain
+    Content-Language: en
+
+    hello
+    ```
+
+    ```HTTP
+    Content-Type: text/html; charset=UTF-8
+    Content-Language: en
+
+    <html><body>hello</body></html>
+    ```
+
+    이러한 것을 "여러 리소스 중 하나가 선택되었다" 말 할 수 없는 이유는 응답이 어떻든 URI가 동일하기 때문이다 URI는 리소스 식별자로 URI가 같으면 같은 리소스인 것이다.
+
+* REST에서의 representation<br>
+    REST는 REpresentation State Transfer의 줄임말이다. State는 웹 애플리케이션의 상태를 의미하고 Transfer는 전송을 의미한다. 여기서 웹 애플리케이션은 웹 서버가 웹 애플리케이션이 아니라, 웹 브라우저가 웹 서버에 접속해야 웹 애플리케이션이다. 세명의 사용자가 각각 자신의 웹 브라우저로 같은 웹 서버에 접속한다면, 세 개의 웹 애플리케이션이 실행되는 것이다.<br><br>
+    링크를 클릭해서 브라우저가 보여주는 페이지가 A에서 B로 바뀌었다. 즉, 웹 애플리케이션의 상태가 변경된 것이다. 또한 이 상태의 변경은 representation의 Transfer를 통해 이루어 졌다. 이것이 REST인 것이다.<br>
+    여기서 주의 할 점은
+    1. Transfer는 상태가 A->B로 바뀐 것을 의미하는 것이 아니고 컴포넌트간의 전송을 의미하는 것이다. 그러니까 서버에서 클라이언트로의 웹페이지 전송을 의미하는 것
+    2. 위에서 말한 representation은 어떤 리소스의 특정 상태를 반영한 정보라고 했는데 그것과 애플리케이션의 상태는 다르다. 애플리케이션의 A->B로 바뀐 그 상태를 말하는 것이다.
+
+출처 - (https://blog.npcode.com/2017/04/03/rest%ec%9d%98-representation%ec%9d%b4%eb%9e%80-%eb%ac%b4%ec%97%87%ec%9d%b8%ea%b0%80/)
+
+
     
     
      
