4-1 Layered Architecture 첫 커밋

--- a/4/4-1.md
+++ b/4/4-1.md
@@ -1,8 +1,82 @@
 # Layered Architecture
 
 ## 관심사의 분리
-    
-## 응집도
-## 결합도
+컴퓨터 과학에서의 관심사 분리는 컴퓨터 프로그램을 구별된 부분으로 분리시키는 디자인 원칙, 각 부문은 개개의 관심사를 해결
+### 관심사
+컴퓨터 프로그램 코드에 영향을 미치는 정보의 집합
+
+관심사의 분리는 정보를 잘 정의된 인터페이스가 있는 코드 부분 안에 캡슐화 시킴으로써 완성된다.
+
+## 모듈화(Modularization)
+* 소프트웨어를 각 기능별로 나누는 것
+* 프로그램이 효율적으로 관리 될 수 있도록 시스템을 분해하고 추상화
+
+## 결합도(Coupling)
+서로 다른 모듈 간의 상호 의존 정도 
+(밑으로 갈 수록 결합도 높음)
+
+* 자료 결합도(Data) - 모듈 간의 인터페이스로 전달되는 파라미터를 통해서만 모듈 간의 상호작용이 일어나는 경우
+* 스탬프 결합도(Stamp) - 모듈 간의 인터페이스로 배열이나 오브젝트, 스트럭처 등이 전달되는 경우
+* 제어 결합도(Control) - 단순 처리할 대상인 값만 전달되는 게 아니라 어떻게 처리를 해야 한다는 제어 요소가 전달되는 경우
+* 외부 결합도(External) - 모듈이 다수의 관련 기능을 가질 때 모듈 안의 구성들이 그 기능을 순차적으로 수행 할 경우
+* 공통 결합도(Common) - 파라미터가 아닌 모듈 밖에 선언되어 있는 전역 변수를 참조하고 갱신하는 식으로 상호작용하는 경우
+* 내용 결합도(Content) - 다른 모듈 내부에 있는 변수나 기능을 다른 모듈에서 사용하는 경우
+
+변경될 가능성이 적은 모듈의 경우 결합도가 높아도 문제가 되지 않을 수 있으나, 결합도를 낮게 유지하는게 좋긴 함
+
+## 응집도(Cohesion)
+모듈 내부에서 구성 요소 간에 밀접한 관계를 맺고 있는 정도
+(밑으로 갈 수록 응집도 높음)
+
+* 우연적 응집도(Coincidental) - 모듈 내부의 각 요소들이 연관이 없는 경우
+* 논리적 응집도(Logical) - 유사한 성격을 갖거나 특정 형태로 분류되는 처리 요소들이 한 모듈에서 처리되는 경우
+* 시간적 응집도(Temporal) - 특정 시점에 처리되어야 하는 활동들을 한 모듈에서 처리하는 경우
+* 절차적 응집도(Procedural) - 모듈이 다수의 관련 기능을 가질 때, 모듈 안의 구성 요소들이 그 기능을 순차적으로 수행하는 경우
+* 통신적 응집도(Communication) - 동일한 입력과 출력을 사용하여 다른 기능을 수행하는 활동들이 모여있는경우
+* 순차적 응집도(Sequential) - 모듈 내에서 한 활동으로부터 나온 출력값을 다른 활동에 사용할 경우
+* 기능정 응집도(Fuctional) - 모듈 내부의 모든 기능이 단일한 목적을 위해 수행되는 경우
+
 ## Layered Atchitecture
-## UUID
+### 전통적인 3계층
+비즈니스 로직을 완전히 분리하여 **데이터베이스** 시스템과 **클라이언트**의 사이에 배치한 일종의 클라이언트 서버 시스템의 일종, 일반적으로 3층구조가 널리 쓰임
+* 프레젠테이션 계층 - 응용프로그램의 최상위에 있는 계층
+* 애플리케이션 계층 - 비즈니스 로직 계층 or 트랜잭션 계층 이라고도 한다, 이 계층은 클라이언트 요청에는 서버처럼 행동하고 세번째 계층의 프로그램에 대해서는 클라이언트처럼 행동한다.
+* 데이터 계층 - 데이터베이스와 그것에 액세스해서 읽거나 쓰는 것을 관리하는 프로그램을 포함.
+  
+### 에릭 에반스의 DDD에 나온 4계층  
+1. UI Layer
+2. Application Layer
+3. Domain Layer
+4. Infrastructure Layer
+상위 레이어는 하위 레이어에 의존, 하위 레이어는 사우이 레이어를 모름.<br>
+https://wikibook.co.kr/article/layered-architecture/
+
+## 자바에서의 Identifier(식별자)
+식별자라는 뜻이 식별할 수 있는 이름, 이런 뜻이다. 우리가 공부하는 자바에서의 식별자는 뭘까? 마찬가지로 자바 코드내에서 사용되는 구별되는 각각의 단어를 의미한다.
+
+### 시스템 정의 식별자
+자바 언어 안에서 특별한 의미를 가지는 식별자이다. 이미 지정되어있기 때문에 사용자 정의 식별자로 사용이 불가능 하다.<br><br>
+ex) 
+|분류|예약어|
+|:----:|----|
+|데이터타입| boolean, byte, char, int ...|
+|접근지정자|private, protected, public|
+|예외처리| try,catch,finally,throw, throws|
+|제어문| if, else, switch, case, for, while ...|
+등등
+
+### 사용자 정의 식별자
+사용자가 지정하는 식별자로 클래스명, 변수명, 메소드명, 상수 등을 지정한다.<br><br>
+ex)
+|구분|정의규칙|
+|:---:|:---|
+|클래스|- 첫 문자는 항상 대문자로 표현<br>- Camel표기법<br>- 의미있는 명사형으로 지정|
+|변수와 메서드|- 첫 문자는 항상 소문자로 표현<br>- 카멜 표기법
+|상수| - 모든 문자 대문자로 표현<br> - 하나 이상의 단어가 합쳐질 때 Under score(_) 사용
+
+
+## UUID(Universally Unique Identifier)
+**범용고유식별자는** 소프트웨어 구축에 쓰이는 식별자 표준이다.<br>
+네트워크 상에서 개체들을 식별하기 위해 고유한 이름이 필요한데 중앙에서 고유 일련번호를 주면 간단하지만 동시다발적으로 개발되고있는 시스템들의 경우 이것이 불가능하다. 해서 개발 주체가 스스로 고유한 이름을 짓도록 한것이 **범용고유식별자** 이다.
+
+완벽하게 고유성을 보장하진 않지만 실제 사용상에서 중복될 가능성이 매우 낮아서 사용되고있다.
