--- a/4/4-1.md
+++ b/4/4-1.md
@@ -1,5 +1,5 @@
 # Layered Architecture
-
+커다란 프로그램은 유지보수가 어렵다. 유지보수가 용이하도록 나누고, 그룹화가 필요하다.
 ## 관심사의 분리
 컴퓨터 과학에서의 관심사 분리는 컴퓨터 프로그램을 구별된 부분으로 분리시키는 디자인 원칙, 각 부문은 개개의 관심사를 해결
 ### 관심사
@@ -80,3 +80,12 @@ ex)
 네트워크 상에서 개체들을 식별하기 위해 고유한 이름이 필요한데 중앙에서 고유 일련번호를 주면 간단하지만 동시다발적으로 개발되고있는 시스템들의 경우 이것이 불가능하다. 해서 개발 주체가 스스로 고유한 이름을 짓도록 한것이 **범용고유식별자** 이다.
 
 완벽하게 고유성을 보장하진 않지만 실제 사용상에서 중복될 가능성이 매우 낮아서 사용되고있다.
+
+## ULID(Universally Unique Lexicographically Sortable Identifier)
+UUID를 사용하다 보니 정렬이 되지 않고 무작위의 값을 생성해 낸다 문제점은 sorting을 할 수 없다는 것 이를 해결하기 위해 ULID를 개발
+
+## TSID(Time Sorted Unique Identifier)
+트위터의 Snowflake와 ULID를 조합해 만든 자바의 라이브러리
+* 대규모 분산 시스템에서의 병렬 처리 가능 및 고유성 보장
+* 공간 효율성
+* 시간이 지남에 따라 점점 커지는 값이기에 정렬의 이점 활용가능
