--- a/megatera/5/5-1.md
+++ b/megatera/5/5-1.md
@@ -3,6 +3,18 @@
 ## Spring AOP(Aspect Oriented Programming)
 관점 지향 프로그래밍은 핵심적인 관점, 부가적인 관점으로 나누어서 보고 그 관점을 기준으로 각각 모듈화 하는 것이다.
 
+### 흩어진 관심사
+다른 클래스에서 겹치고 반복되는 코드를 흩어진 관심사(횡단 관심사) 라고 부른다. 
+이 것들을 모듈화해서 재사용하겠다는 것이 AOP의 취지이다.
+
+### 용어
+* advice - 실질적인 로직이 담긴 구현체
+* join point - advice 적용 가능한 위치 ex) 메서드 실행 시점, 생성자 호출 시점, 필드 값 접근 시점
+* pointcut - join point 의 스펙을 정의 한 것
+* Target - advice가 적용될 곳 pointcut에 설정
+* Advisor - Spring AOP에서만 사용되는 용어로 advice + pointcut 한 쌍
+* Aspect - advice 와 pointcut을 모듈화 한 것
+
 
 ## Dependency Injection
 
