--- a/megatera/5/5-1.md
+++ b/megatera/5/5-1.md
@@ -17,11 +17,55 @@
 
 
 ## Dependency Injection
+### 의존관계
+의존관계가 무엇인가? "A가 바뀌었을 때 B에게 영향이 있다면 B는 A에게 의존한다." 라고 할 수 있다. A의 기능이 추가 되거나 기능이 변경되면 그 영향이 B에게 미친다.<br>
+
+의존관계를 추상화하게 되면 더 다양한 의존관계를 맺을 수 있게 된다. 실제 구현 클래스와의 관계가 느슨해지고 결합도가 낮아진다.
+### 의존성 주입
+우리가 알아 볼 것은 **의존성 주입** 위에서 말한 보통의 의존관계 상황에서는 내가 직접 어떤 클래스에 의존하는지 정해준다. 만약 내가 정하지 않고 외부에서 정해주는 클래스를 사용하게 된다면?<br>
+
+이런식으로 의존관계를 외부에서 정해주고 주입해주는 것이 의존성 주입이다.<br>
+스프링의 바이블 토비의 스프링에서는 다음과 같이 정의하고 있다.
+* 클래스모델이나 코드에는 런타임 시점의 의존관계가 드러나지 않는다. 그러기 위해서는 인터페이스만 의존하고 있어야 한다.
+* 런타임 시점의 의존관계는 컨테이너나 팩토리 같은 제 3의 존재가 결정한다.
+* 의존관계는 사용할 오브젝트에 대한 레퍼런스를 외부에서 제공해줌으로서 만들어진다.
+
+### 의존성 주입의 이점
+1. 의존성이 줄어든다<br>
+   의존관계의 경우 A클래스의 변화에 B가 영향을 받는다. 해서 A의 변화가 있을 때마다 B도 함께 변경해 주어야 하는데 DI로 구현하면 A가 변하더라도 B에게는 변화가 없다
+2. 재사용성이 높은 코드
+3. 테스트하기 좋은 코드가 된다.
+4. 가독성이 높아진다
+   
+### 정리
+DI는 객체가 의존하는 또 다른 객체를 외부에서 선언하고 이를 주입받아 사용하는 것
+   
 
 ## 싱글턴 패턴
+객체의 인스턴스가 단 하나만 생성되는 것을 의미
+### 자바의 싱글턴 패턴
+1. 생성자가 private로 구현되기 때문에 상속이 불가능함
+2. 테스트가 어려움
+3. 멀티쓰레드 환경에서 인스턴스가 하나만 생성됐다고 보장하기 어려움
+4. 전역으로 자원을 공유하기 때문에 바람직하지 못함
 
+### 스프링의 싱글턴 패턴
+framework의 도움으로 싱글턴 패턴을 보다 더 쉽고 좋게 사용가능해졌다. 빈 객체를 따로 관리하기 때문에 불필요한 코드들이 사라진다
+1. 생성자가 사라져 상속이 가능해짐
+2. 테스트가 용이해짐
+3. 하나의 인스턴스를 보장받음
+   
 ## IoC(Inversion of Control)
+기존의 개발자가 모두 가지고 있던 제어를 framework에게 주면 객체의 제어권이 모두 넘어가 버리니 제어가 역전되었다고 한다.
 
 ## Spring Bean
-
+IoC컨테이너(Spring 컨테이너)가 관리하는 자바 객체를 빈이라고 한다. 
 ## BeanFactory
+1. BeanFactory
+   - 빈팩토리 계열의 인터페이스만 구현한 클래스는 단순히 컨테이너에서 객체를 생성하고 DI를 처리하는 기능만 제공
+   - 빈을 등록,생성,조회,반환 관리
+   - 빈을 조회할 수 있는 getBean() 메서드가 정의되어 있음
+   - 보통 빈팩토리를 직접 사용하지 않고, 조금더 확장된 ApplicationContext를 사용한다.
+2. ApplicationContext
+   - 기본적인 빈팩토리의 기능들을 가지고 있음
+   - 스프링의 부가 기능을 제공
